# src/main/swagger/swagger.yaml
@@ -161,6 +161,40 @@ paths:
                 '404':
                     description: Not Found
             deprecated: false
+    '/account/{login}/set-password':
+        post:
+            tags:
+                - account-resource
+            summary: setPassword
+            operationId: setPasswordUsingPOST
+            consumes:
+                - application/json
+            produces:
+                - '*/*'
+            parameters:
+                - name: login
+                  in: path
+                  description: login
+                  required: true
+                  type: string
+                - in: body
+                  name: passwordChangeDto
+                  description: passwordChangeDto
+                  required: true
+                  schema:
+                      $ref: '#/definitions/PasswordChangeDTO'
+            responses:
+                '200':
+                    description: OK
+                '201':
+                    description: Created
+                '401':
+                    description: Unauthorized
+                '403':
+                    description: Forbidden
+                '404':
+                    description: Not Found
+            deprecated: false
     /authenticate:
         get:
             tags:
